control-plane/manifests/gateway/private/securitypolicy.yaml
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: gw-oidc-keycloak
  namespace: envoy-gateway-system
spec:
  targetRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: private-gw
    namespace: envoy-gateway-system
    sectionName: apps
  oidc:
    provider:
      issuer: "https://keycloak.internal.tineochristopher.com/realms/kubernetes"
      authorizationEndpoint: "https://keycloak.internal.tineochristopher.com/realms/kubernetes/protocol/openid-connect/auth"
      tokenEndpoint: "https://keycloak.internal.tineochristopher.com/realms/kubernetes/protocol/openid-connect/token"
    clientID: "oauth2-proxy"
    clientSecret:
      name: "keycloak-client-secret"
    redirectURL: "https://login.apps.internal.tineochristopher.com/oauth2/callback"
    logoutPath: "/logout"
    cookieDomain: "apps.internal.tineochristopher.com"
